# phy607-project3

./: README.md  pyproject.toml
project/: Initial_codes.py  code skeleton.txt  main.py  main_old.py
tests/neg1_start_tests/: testrun_neg1start.ipynb
tests/pos1_start_tests/: testrun_pos1start.ipynb
tests/random_start_tests/: testrun_randomstart.ipynb
